test-data/fw-policy/json-dumps/compute-instances-europe-west2-b.json
{
  "id": "projects/gcpdiag-fw-policy-aaaa/zones/europe-west2-b/instances",
  "kind": "compute#instanceList",
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-fw-policy-aaaa/zones/europe-west2-b/instances"
}
