test-data/fw-policy/json-dumps/compute-migs-europe-west2-b.json
{
  "id": "projects/gcpdiag-fw-policy-aaaa/zones/europe-west2-b/instanceGroupManagers",
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-fw-policy-aaaa/zones/europe-west2-b/instanceGroupManagers",
  "kind": "compute#instanceGroupManagerList"
}
