test-data/fw-policy/json-dumps/compute-subnetworks-europe-west1.json
{
  "id": "projects/gcpdiag-fw-policy-aaaa/regions/europe-west1/subnetworks",
  "items": [
    {
      "id": "8027686198921364530",
      "creationTimestamp": "2021-12-06T08:31:25.987-08:00",
      "name": "default",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-fw-policy-aaaa/global/networks/default",
      "ipCidrRange": "10.132.0.0/20",
      "gatewayAddress": "10.132.0.1",
      "region": "https://www.googleapis.com/compute/v1/projects/gcpdiag-fw-policy-aaaa/regions/europe-west1",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-fw-policy-aaaa/regions/europe-west1/subnetworks/default",
      "privateIpGoogleAccess": false,
      "fingerprint": "XHfbXKOmFjg=",
      "privateIpv6GoogleAccess": "DISABLE_GOOGLE_ACCESS",
      "purpose": "PRIVATE",
      "stackType": "IPV4_ONLY",
      "kind": "compute#subnetwork"
    }
  ],
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-fw-policy-aaaa/regions/europe-west1/subnetworks",
  "kind": "compute#subnetworkList"
}
