test-data/fw-policy/json-dumps/iam-service-accounts.json
{
  "accounts": [
    {
      "displayName": "Compute Engine default service account",
      "email": "12340004-compute@developer.gserviceaccount.com",
      "etag": "MDEwMjE5MjA=",
      "name": "projects/gcpdiag-fw-policy-aaaa/serviceAccounts/12340004-compute@developer.gserviceaccount.com",
      "oauth2ClientId": "REDACTED",
      "projectId": "gcpdiag-fw-policy-aaaa",
      "uniqueId": "101256181481776388736"
    }
  ]
}
