test-data/fw-policy/json-dumps/org-constraint-compute.disableSerialPortLogging.json
{
  "booleanPolicy":{},
  "constraint": "constraints/compute.disableSerialPortLogging"
}
