test-data/fw-policy/json-dumps/org-constraint-compute.requireShieldedVm.json
{
  "booleanPolicy": {},
  "constraint": "constraints/compute.requireShieldedVm"
}
